# review-code-app

./: docker-compose.yaml
code-review-backend/: Dockerfile  pom.xml
code-review-backend/src/main/java/com/example/demo/controller/: CodeController.java
code-review-backend/src/main/java/com/example/demo/dto/: CodeRange.java  CodeReviewResponse.java  JobeResponse.java  RunRequest.java  RunResponse.java  TestcaseResult.java
code-review-backend/src/main/resources/: application.yml
code-review-backend/src/main/resources/templates/: cpp_template.txt
code-review-fe/: package-lock.json  package.json  pnpm-lock.yaml
code-review-fe/src/app/: globals.css  page.tsx
code-review-fe/src/app/code-review/: page.tsx
code-review-fe/src/components/code-review/: CodeWorkspace.tsx  EditorPanel.tsx  ProblemPanel.tsx  ReviewPanel.tsx  TestCasePanel.tsx
code-review-fe/src/components/ui/shadcn-io/aurora-background/: index.tsx
code-review-fe/src/store/: codeStore.ts
embedding-documents/: pyproject.toml
embedding-documents/src/embeddingdocuments/: categorize.py  process_image.py
review-agent/: Dockerfile  main.py  pyproject.toml  requirements.txt  test_request.json
review-agent/app/: app.py
review-agent/app/agents/: concept_mapping_agent.py  fix_hint_agent.py  improvement_agent.py  logic_agent.py  overview_agent.py  reflection_agent.py
review-agent/app/api/: review_code_deps.py  review_code_route.py  review_code_schema.py
review-agent/app/models/: review_state.py
review-agent/app/services/: review_code_service.py
review-agent/app/utils/: parse_json_response.py
(+5 files in other folders)
